<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crapp</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginbutton"> Login </string>
    <string name="newacclink">New to APPNAME? Click here to sign up!</string>
    <string name="sea"> Search here</string>
    <string name="password">"Password"</string>
    <string name="email">"    Email"</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_search">Search</string>
    <string name="name">"User Name"</string>
    <string name="regnew">"Register New Account"</string>
    <string name="backtolog">Back to Login</string>
    <string name="desc">Image Description</string>
    <string name="rate">Rate</string>
    
    <string name="action_settings">Settings</string>
    <string name="radius">Search radius</string>
    <string name="places">Show Places on Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="map">Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="map_mode">Map View</string>
    <string name="address">Address:</string>
    <string name="phone">"Phone: "</string>
    <string name="sort">Sort by</string>
   
     <string-array name="secretquestion_arrays">
        <item>What is your favorite color?</item>
        <item>What was your first pets name?</item>
        <item>What is your favorite show?</item>
        <item>What is the best wine?</item>
        <item>Who is your idol?</item>
        <item>What year and model was your first car?</item>
        <item>What you mothers maiden name?</item>
        <item>How many fingers do you have?</item>
    </string-array>
    
     
    <string-array name="wineType_arrays">
        <item>Dessert Wine</item>
        <item>Ice Wine</item>
        <item>Red Wine</item>
        <item>Sparkling Wine</item>
        <item>White Wine</item>
    </string-array>
    
    <string-array name="day_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    
     <string-array name="month_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    

    
     
</resources>