<?xml version="1.0" encoding="utf-8"?> 
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/home">
 
         <!-- Header  Starts -->
        <LinearLayout 
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:orientation="vertical"
                android:gravity="center">
                <!-- Logo Start -->
     <ImageView android:src="@drawable/wine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"/>
                
                
      <EditText android:id="@+id/login_name"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"
                android:singleLine="true"
                android:hint="@string/name"
                android:gravity="center"
                android:textColor="#000000"/>   
     
      <EditText android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"
                android:singleLine="true"
                android:hint="@string/password"
                android:gravity="center"
                android:password="true"
                android:textColor="#000000"/>
     
        <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/round"
                android:text="@string/loginbutton"
                android:onClick="signIn"
                android:textColor="#000000"/>
 
      <TextView android:id="@+id/or"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="20dip"
                android:text="OR"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#FFFFFF"/>
      
      <ImageButton
			    android:id="@+id/ImageButton01"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/facebook"
			    android:layout_marginTop="10dip"
                android:layout_marginBottom="20dip"
			    android:background="@drawable/round"
			     />
      
      <!--  added code here -->
      <TextView
        	    android:id="@+id/buttonSignIN"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginBottom="20dip"
        		android:layout_marginTop="20dip"
        		android:textSize="20sp"
        		android:gravity="center"
         		android:text="Forgot Password?" 
         		android:textColor="#FFFFFF"
         		android:onClick="forgottenPassword"
         		android:clickable="true"/>
      
      
      
      
      <TextView android:id="@+id/linkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:layout_marginBottom="20dip"
                android:text="@string/newacclink"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#FFFFFF"/>
   
       </LinearLayout> 
  </RelativeLayout>
</ScrollView>