<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="@drawable/home">
 
        <!--  Header  Starts-->
        <LinearLayout 
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:gravity="center"
                >
                <!-- Logo Start-->
                <ImageView 
                    android:src="@drawable/wine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    />
                <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
 
        <!-- Registration Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header"
          android:gravity="center">
          <!-- Full Name Label -->
          <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="@string/name"/>
          <EditText 
                android:id="@+id/reg_fullname"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:textColor="#000000"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"/>
          <!--  Email Label -->
          <!--
          <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="Email"/>
          <EditText 
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"/> -->
          <!-- Password Label -->
          <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="Password"/>
          <EditText 
                android:id="@+id/reg_password"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:textColor="#000000"
                android:password="true"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"/>
          <!--  Confirm Password Label -->
           <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="Confrim Password"/>
          <EditText 
                android:id="@+id/reg_confpassword"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:password="true"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textColor="#000000"
                android:background="@drawable/round"/>
          
          
          
          
          <!--  Drop Down security question -->
           <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="Select A Security Question"
         		/>
           <Spinner
        		android:id="@+id/spinner1"
        		android:gravity="center"
        		android:layout_width="fill_parent"
        		android:layout_height="40dip"
        		android:entries="@array/secretquestion_arrays"
        		android:layout_marginBottom="20dip"
        		android:textColor= "#000000"
        		android:background = "@drawable/round"/>
          
          <Spinner
        		android:id="@+id/month"
        		android:gravity="center"
        		android:layout_width="fill_parent"
        		android:layout_height="40dip"
        		android:entries="@array/month_arrays"
        		android:layout_marginBottom="20dip"
        		android:textColor= "#000000"
        		android:background = "@drawable/round"/>
          
          <Spinner
        		android:id="@+id/day"
        		android:gravity="center"
        		android:layout_width="fill_parent"
        		android:layout_height="40dip"
        		android:entries="@array/day_arrays"
        		android:layout_marginBottom="20dip"
        		android:textColor= "#000000"
        		android:background = "@drawable/round"/>
          
          <Spinner
        		android:id="@+id/year"
        		android:gravity="center"
        		android:layout_width="fill_parent"
        		android:layout_height="40dip"
        		android:layout_marginBottom="20dip"
        		android:textColor= "#000000"
        		android:background = "@drawable/round"/>
          
          
          <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="Security Question Answer"/>
         <EditText 
                android:id="@+id/security_answer"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:textColor="#000000"
                android:singleLine="true"
                android:gravity="center"
                android:layout_marginBottom="20dip"
                android:background="@drawable/round"/>
          
          
          
          
          
          
          <!-- Register Button -->
          <Button 
                android:id="@+id/btnRegister"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dip"
                android:text="@string/regnew"
                android:background="@drawable/round"
                android:onClick="newReg"
                android:textColor="#000000"/>
          <!-- Link to Login Screen -->
          <TextView 
                android:id="@+id/link_to_login"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/backtolog"
                android:textSize="20dip"
                android:textColor="#FFFFFF"/>
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>